--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,22 @@ dependencies:
 
   collection: ^1.19.1
   freezed_annotation: ^2.4.4
-  http: ^1.3.0
-  intl: ^0.19.0
+  http: ^1.4.0
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   shared_aws_api: ^2.0.0
   uuid: ^4.5.1
   xml: ^6.5.0
 
+dependency_overrides:
+  http: ^1.4.0
+  intl: ^0.20.2
+  uuid: ^4.5.1
+
 dev_dependencies:
   build_runner: any
   dotenv: ^4.2.0
   freezed: ^2.5.8
-  json_serializable: ^6.9.4
+  json_serializable: ^6.9.5
   lints: any
   test: any
