--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,15 @@ dependencies:
   http: ^1.4.0
   intl: ^0.20.2
   json_annotation: ^4.9.0
-  shared_aws_api: ^2.0.0
   uuid: ^4.5.1
   xml: ^6.5.0
 
-dependency_overrides:
-  http: ^1.4.0
-  intl: ^0.20.2
-  uuid: ^4.5.1
-
+  shared_aws_api:
+    git:
+      url: https://github.com/Omnimind-Ltd/aws_client.git
+      ref: master
+      path: shared_aws_api
+      
 dev_dependencies:
   build_runner: any
   dotenv: ^4.2.0
